Fixed misalignment of text area for long subject lines

--- a/bm24/app/css/input-email-body.css
+++ b/bm24/app/css/input-email-body.css
@@ -1,7 +1,7 @@
 .input-email-body {
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
+    align-items: center;
     justify-content: center;
     margin: 0 auto;
     text-align: left;
@@ -11,4 +11,16 @@
 .input-text-area {
     margin-top: 10px;
     margin-bottom: 10px;
+    display: block;
+}
+
+.submit-button {
+    align-self: flex-start;
+}
+
+.wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
 }
